client-side/src/index.css
*{
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans&display=swap');

.note{
     
    color: white;
    justify-content: center;
  

}

header{
  background:#1e65ff;
  padding: 10px;
}

header h1{
  color:white;
  max-width: 1200px;
  margin: 0 auto;
}


#infoHub{
display: grid;
grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
grid-auto-rows: minmax(150px, auto);
grid-gap: 10px;
margin:0 auto;

}



 .nested{
   display:grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   
   grid-column: 2/6;
   
 } 

 


.newsHub{

}

